# lama2_chat

./: LICENSE  README.md  ingest.py  launch.py  model.py  process.md  pyproject.toml  requirements.txt
lama2_chat/: metadata.yaml
lama2_chat/data_loaders/: extract_document.py
lama2_chat/pipelines/wispy_pine/: metadata.yaml
vectorstore/db_faiss/: index.faiss  index.pkl
